// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withAction renders a custom error message 1`] = `
<div>
  <div
    class="error-page-root page-container"
  >
    <h1>
      404
    </h1>
    <h3>
      Page Not Found
    </h3>
    <p>
      my fancy message, oh so fancy
    </p>
    <a
      class="button-root btn btn-secondary"
      href="/"
    >
      Go to Home
    </a>
  </div>
</div>
`;

exports[`withAction renders error if the RemoteData has error 1`] = `
<div>
  <div
    class="error-page-root page-container"
  >
    <h1>
      404
    </h1>
    <h3>
      Page Not Found
    </h3>
    <p>
      The page you are looking for does not exist.
    </p>
    <a
      class="button-root btn btn-secondary"
      href="/"
    >
      Go to Home
    </a>
  </div>
</div>
`;

exports[`withAction renders loading if the RemoteData is loading and data is null 1`] = `
<div>
  <span
    aria-hidden="true"
    class="loading-root center loading-animation"
  />
</div>
`;

exports[`withAction renders the wrapped component 1`] = `
<div>
  <div>
    foo
  </div>
</div>
`;

exports[`withAction renders the wrapped component if bypassErrorPage is true even if the RemoteData has an error 1`] = `
<div>
  <div>
    foo
  </div>
</div>
`;
